# ict-trader

./: README.md  main.py  pyproject.toml
docs/: 01-Requirements.md  03-Models.md
jupyter/: mt5_playground.ipynb
modules/market_model/: candlestick.py  sequence.py
src/ict_structures/: candlestick_protocol.py
src/ict_structures/segments/: bos.py  choch.py  segment.py
src/market_model/: candlestick.py  sequence.py  timeframe.py
test/market_model/: test_sequence.py
test/market_model/test_rates/: step_index_h4.csv  step_index_m1.csv  step_index_m15.csv
